# bias-detector

./: .env.example  DESIGN.md  IMPROVEMENTS_SUMMARY.md  README.md  bias.md  bias.txt  llm_improvements.md  main.py  pyproject.toml  setup_nltk.py  test_server.py
data/: biases.json
data/feedback/: accuracy_metrics.json  feedback_history.json
data/performance/: performance_history.json
src/: __init__.py  main.py
src/engines/: __init__.py  heuristic_engine.py  llm_engine.py
src/feedback/: __init__.py  learning_system.py  performance_tracker.py
src/models/: __init__.py  analysis_models.py
src/recommendations/: __init__.py  usage_optimizer.py
